Fix username overlapping menu
Change z-index of menu to prevent username on character page from 
overlapping the menu.

--- a/storc/static/styles/menu.css
+++ b/storc/static/styles/menu.css
@@ -14,6 +14,7 @@
     top: 35px;
     display: none;
     width: 100%;
+    z-index: +1;
 }
 
 .menu:hover{
